refactor: use latest goframe_learn
1.0.0
