# swagger/swagger.json
@@ -1,8 +1,11 @@
 {
+    "schemes": [
+        "http"
+    ],
     "swagger": "2.0",
     "info": {
-        "description": "`share_board` HaoTian Qi 的 共享白板，基于 Goframe + Websocket",
-        "title": "share_board API",
+        "description": "`share_board_backend` 117503445 的 共享白板 api",
+        "title": "share_board_backend API",
         "contact": {
             "name": "117503445",
             "url": "http://www.117503445.top",
@@ -11,7 +14,7 @@
         "license": {
             "name": "GNU GPL 3.0"
         },
-        "version": "1.0.1"
+        "version": "1.0.0"
     },
     "paths": {
         "/": {
@@ -28,6 +31,178 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.JsonResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/task": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务"
+                ],
+                "summary": "获取所有任务",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.TaskApiResponse"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务"
+                ],
+                "summary": "添加一个任务",
+                "parameters": [
+                    {
+                        "description": "任务",
+                        "name": "tasks",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.TaskApiRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.TaskApiResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/task/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务"
+                ],
+                "summary": "获取一个任务",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "任务id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.TaskApiResponse"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务"
+                ],
+                "summary": "更改一个任务",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "任务id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "任务",
+                        "name": "tasks",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.TaskApiRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.TaskApiResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "任务"
+                ],
+                "summary": "删除一个任务",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "任务id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"message\": \"delete success\"}",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -126,6 +301,31 @@
         }
     },
     "definitions": {
+        "model.TaskApiRequest": {
+            "type": "object",
+            "properties": {
+                "Done": {
+                    "type": "boolean"
+                },
+                "Title": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.TaskApiResponse": {
+            "type": "object",
+            "properties": {
+                "Done": {
+                    "type": "boolean"
+                },
+                "Title": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "model.UserApiLoginReq": {
             "type": "object",
             "properties": {
